--- a/problems.tex
+++ b/problems.tex
@@ -8,6 +8,7 @@
 \usepackage{caption}
 \usepackage{adjustbox}
 \usepackage{upquote}
+\usepackage{amsmath}
 \usetikzlibrary{mindmap,shadows, shapes, arrows, positioning}
 
 \pagestyle{headandfoot}
