--- a/content.tex
+++ b/content.tex
@@ -111,7 +111,7 @@
 
 \question
   Three houses A, B, C each has to be connected to the gas, water and electricity supplies: G, W, E.
-  Write own the adjacency list for the graph which represents this problem, and construct a pictorial representation of it.
+  Write down the adjacency list for the graph which represents this problem, and construct a pictorial representation of it.
   Can you find a picture in which the lines representing the edges do not cross?~\cite{biggs02}
 	\begin{solution}
 		
