--- a/problems.tex
+++ b/problems.tex
@@ -39,7 +39,7 @@
 \begin{questions}
 
 \question
-	Consider the following graph.~\cite{biggs02}
+	Consider the following graph~\cite{biggs02}.
   
   \begin{figure}[h]
   \centering
@@ -81,7 +81,7 @@
 \question
 	Professor McBrain and his wife April give a party at which there are four other married couples.
 	Some pairs of people shake hands when they meet, but naturally no couple shake hands with each other.
-	At the end of the party the Professor asks everyone else how many people they have shaken hands with, and he receives nine different answers.~\cite{biggs02}
+	At the end of the party the Professor asks everyone else how many people they have shaken hands with, and he receives nine different answers~\cite{biggs02}.
 	
 	\begin{parts}
 		\part Draw a graph representing the handshakes exchanged at the party.
@@ -152,7 +152,8 @@
 	\begin{solution}
 		
 		Adjacency list:
-		\begin{center}
+		
+    \begin{center}
   		\begin{tabular}{r|lll}
   			A & G & E & W \\
   			B & G & E & W \\
@@ -202,7 +203,7 @@
   	&\{0,1\}, \{0,2\}, \ldots, \{0,n\}, \\
   	&\{1,2\}, \{2,3\}, \ldots, \{n-1,n\}, \{n,1\}
   \end{align*}
-  Describe a route around the pathways which starts and ends at vertex 0 and visits every vertex once only.~\cite{biggs02}
+  Describe a route around the pathways which starts and ends at vertex 0 and visits every vertex once only~\cite{biggs02}.
 
 	\begin{solution}
 	
@@ -243,7 +244,7 @@
 	\end{solution}
 
 \question
-  For each positive integer $n$ we define the complete graph $K_n$ to be the graph with n vertices in which each pair of vertices is adjacent.~\cite{biggs02}
+  For each positive integer $n$ we define the complete graph $K_n$ to be the graph with n vertices in which each pair of vertices is adjacent~\cite{biggs02}.
   \begin{parts}
   	\part How many edges has $K_n$?
   	\part For which values of $n$ can you find a pictorial representation of $K_n$ with the property that the lines representing the edges do not cross?
@@ -261,7 +262,7 @@
 
 \question
   A 3-cycle in a graph is a set of three mutually adjacent vertices.
-  Construct a graph with five vertices and six edges which contains no 3-cycles.~\cite{biggs02}
+  Construct a graph with five vertices and six edges which contains no 3-cycles~\cite{biggs02}.
 
 	\begin{solution}
 		There are lots of possibilities. Here's one:
