--- a/problems.tex
+++ b/problems.tex
@@ -153,6 +153,7 @@
 		
 		Adjacency list:
 		
+    \newpage
     \begin{center}
   		\begin{tabular}{r|lll}
   			A & G & E & W \\
@@ -192,7 +193,6 @@
 			\end{adjustbox}
 		\end{center}
 		It's impossible to draw the graph without some edges crossing.
-		This will be proven in later lectures.
 	\end{solution}
 	
 
